feat: Add loan crud operations and authorize user based on role using cancan gem

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
+table {
+  border-collapse: collapse;
+  text-align: center;
+}
+
+table, th, td {
+  border: 1px solid black;
+  padding: 8px;
+}
+
+.notice {
+  color: green;
+}
+
+.alert {
+  color: red;
+}
