--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -6,6 +6,18 @@
   <%= link_to 'View Loans', loans_path %> <br><br>
   <%= link_to 'Edit Profile', edit_user_registration_path %> <br><br>
   <%= button_to 'Sign out', destroy_user_session_path, method: :delete %>
+
+  <% if @notifications.any? %>
+    <h2>Notifications</h2>
+    <ul>
+      <% @notifications.each do |notification| %>
+        <li>
+          <p><%= notification.message %></p>
+          <%= button_to 'Mark as read', mark_as_read_notification_path(notification), method: :patch %><br>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
 <% else %>
   <%= link_to 'Sign Up', new_user_registration_path %> |
   <%= link_to 'Sign In', new_user_session_path %>
